--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -108,20 +108,14 @@ body {
     flex-direction: row;
 }
 
-#sets ul li i {
-    text-decoration: none;
-    list-style-type: none;
-    font-size: 22px;
-    cursor: pointer;
-    background-color: white;
-    padding: 15px 20px 15px 20px;
+.set-btn {
+    width: 50px;
+    height: 50px;
+    font-size: 26px;
     border-radius: 50%;
+    border: none;
     cursor: pointer;
     box-shadow: 1px 1px 5px gray;
-}
-
-#sets ul li {
-    list-style-type: none;
 }
 
 .selected {
